@@ -1,1 +1,0 @@
-/*XXX bogus kludge */
